tests/specs/ecosystem/hajime_san/specifier_resolver/1_0_24.test
hajime-san/specifier-resolver/1.0.24
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/assert@^0.217.0": "jsr:@std/assert@0.217.0",
      "jsr:@std/bytes@^0.217.0": "jsr:@std/bytes@0.217.0",
      "jsr:@std/fs@0.217.0": "jsr:@std/fs@0.217.0",
      "jsr:@std/io@0.217.0": "jsr:@std/io@0.217.0",
      "jsr:@std/path@0.217.0": "jsr:@std/path@0.217.0",
      "jsr:@std/path@^0.217.0": "jsr:@std/path@0.217.0",
      "npm:typescript@5.0.3": "npm:typescript@5.0.3"
    },
    "jsr": {
      "@std/assert@0.217.0": {
        "integrity": "c98e279362ca6982d5285c3b89517b757c1e3477ee9f14eb2fdf80a45aaa9642"
      },
      "@std/bytes@0.217.0": {
        "integrity": "58209975707478fe12423d0b3270f4d400fd135a4edb1f50eeca8f92e34e6580"
      },
      "@std/fs@0.217.0": {
        "integrity": "0bfff5f3618d68c385b28b4ffbf3a15c98293a0f1186444458b62e0111ce77b2",
        "dependencies": [
          "jsr:@std/assert@^0.217.0",
          "jsr:@std/path@^0.217.0"
        ]
      },
      "@std/io@0.217.0": {
        "integrity": "08d3dd7c10956d1433be95306ec15179cdebe49a0ce5a74238fabf140bb74382",
        "dependencies": [
          "jsr:@std/assert@^0.217.0",
          "jsr:@std/bytes@^0.217.0"
        ]
      },
      "@std/path@0.217.0": {
        "integrity": "1217cc25534bca9a2f672d7fe7c6f356e4027df400c0e85c0ef3e4343bc67d11",
        "dependencies": [
          "jsr:@std/assert@^0.217.0"
        ]
      }
    },
    "npm": {
      "typescript@5.0.3": {
        "integrity": "sha512-xv8mOEDnigb/tN9PSMTwSEqAnUvkoXMQlicOb0IUVDBSQCgBSaAAROUZYy2IcUy5qU6XajK5jjjO7TMWqBTKZA==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /bin.ts:14:7
   | 
14 | const main = async (args: {
   |       ^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: async function expressions without a return statement can have a return type of either 'Promise<void>' or 'Promise<never>'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


